// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders FormInput with placeholder 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgba(33, 33, 33, 0.87)",
          "fontSize": 15,
          "fontWeight": "normal",
          "textAlign": "left",
        },
      ]
    }
  >
    Name
  </Text>
  <View
    style={
      Object {
        "borderColor": "rgba(33, 33, 33, 0.5)",
        "borderRadius": 15,
        "borderWidth": 0.9,
        "height": 45,
        "marginVertical": 10,
        "paddingHorizontal": 10,
        "width": "100%",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholder="placeholder"
      placeholderTextColor="rgba(33, 33, 33, 0.5)"
      rejectResponderTermination={true}
      style={
        Object {
          "height": "100%",
          "textAlignVertical": "bottom",
          "width": "100%",
        }
      }
      underlineColorAndroid="transparent"
    />
  </View>
</View>
`;

exports[`renders colored FormInput 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgba(33, 33, 33, 0.87)",
          "fontSize": 15,
          "fontWeight": "normal",
          "textAlign": "left",
        },
      ]
    }
  >
    Name
  </Text>
  <View
    style={
      Object {
        "borderColor": "rgba(33, 33, 33, 0.5)",
        "borderRadius": 15,
        "borderWidth": 0.9,
        "height": 45,
        "marginVertical": 10,
        "paddingHorizontal": 10,
        "width": "100%",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholderTextColor="rgba(33, 33, 33, 0.5)"
      rejectResponderTermination={true}
      style={
        Object {
          "height": "100%",
          "textAlignVertical": "bottom",
          "width": "100%",
        }
      }
      underlineColorAndroid="transparent"
    />
  </View>
</View>
`;

exports[`renders regular FormInput 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgba(33, 33, 33, 0.87)",
          "fontSize": 15,
          "fontWeight": "normal",
          "textAlign": "left",
        },
      ]
    }
  >
    Name
  </Text>
  <View
    style={
      Object {
        "borderColor": "rgba(33, 33, 33, 0.5)",
        "borderRadius": 15,
        "borderWidth": 0.9,
        "height": 45,
        "marginVertical": 10,
        "paddingHorizontal": 10,
        "width": "100%",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholderTextColor="rgba(33, 33, 33, 0.5)"
      rejectResponderTermination={true}
      style={
        Object {
          "height": "100%",
          "textAlignVertical": "bottom",
          "width": "100%",
        }
      }
      underlineColorAndroid="transparent"
    />
  </View>
</View>
`;
